removed refs to hardcoded /plugin-cm-neo/* urls

--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -101,8 +101,6 @@
 	<tml:include ref="content-changed-observer"/>
 	
 	<script>
-		require(["api", "cm"], function(API, CM){
-			CM.setImageRoot("<tml:url type="file" doc="images" file=""/>");
-		})
+		require(["api"])
 	</script>
 </tml:case>
