--- a/OpenWGA/plugins/cm-neo/design/tml/html/main.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/main.tml
@@ -1,6 +1,6 @@
 <tml:include ref="html">
 
-	<tml:portlet name="cm-main" ref="bootstrap:portlet" ajax="true"/>
+	<tml:portlet name="cm-main" ref="bootstrap:portlet" ajax="true" portletmode="view"/>
 
 	<div id="heading-helper-css" style="display:none">
 
