--- a/OpenWGA/plugins/cm-neo/design/tml/html/login-to-default-app.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/login-to-default-app.tml
@@ -1,6 +1,6 @@
 <tml:include ref="html">
 
-	<tml:include ref="page" o_title="[{WGA.Brand.name} Content Manager{$mc.defaultDbKey() ? ' - Anmeldung an Default-App' : ''}]">
+	<tml:include ref="page" o_title="[{WGA.Brand.name} Content Manager - Anmeldung]">
 		
 		<div class="splash">
 	
@@ -9,40 +9,32 @@
 			<tml:form source="none" id="login" defaultaction="$mc.cmlogin" cssstyle="margin:30px 0">
 				<tml:case condition="tmlform.hasmessages()">
 					<div class="alert alert-danger">
-						<h4>Die Anmeldung konnte nicht durchgeführt werden:</h4>
+						<h4>Es ist ein Fehler aufgetreten</h4>
 						<ul><li>
 							<tml:formmessages divider="</li><li>"/>
 						</li></ul>
 					</div>
 				</tml:case>
 				
-				<tml:if condition="$mc.defaultDbKey()">
-					<tml:then>
-						<div class="form-group">
-							<label _class="control-label col-sm-2">Benutzername:</label>
-							<tml:input name="username" cssclass="form-control" html_placeholder="Ihr Benutzername ..." focus="true"/>
-						</div>
-						<div class="form-group">
-							<label>Kennwort:</label>
-							<tml:input name="password" type="password" cssclass="form-control" html_placeholder="Ihr Kennwort ..."/>
-						</div>
-						<div class="form-group">
-							<tml:button cssclass="btn btn-primary" clickaction="$mc.cmlogin" html_type="submit">Anmelden ...</tml:button>
-						</div>
-					</tml:then>
-					<tml:else>
-						<div>
-							<p>Für den verwendeten Host ist keine Default App konfiguriert.</p>
-							<h1>Website auswählen</h1>
-							<div class="form-group">
-								<tml:input name="dbkey" cssclass="form-control" html_placeholder="Name (Schlüssel) der Website" focus="true"/>
-							</div>
-							<div class="form-group">
-								<tml:button cssclass="btn btn-primary" clickaction="$mc.cmlogin" html_type="submit">Weiter ...</tml:button>
-							</div>
-						</div>
-					</tml:else>
-				</tml:if>
+				<tml:{div} html_class="form-group" unless="$mc.defaultDbKey">
+					<label>Zu bearbeitende Website</label>
+					<tml:input name="dbkey" cssclass="form-control" html_placeholder="Name (Schlüssel) der Website" focus="true"
+						validation="$E_VALUE!=''"
+						message="Bitte wählen Sie eine Website aus"
+					/>
+				</tml:{div}>
+				
+				<div class="form-group">
+					<label>Benutzername</label>
+					<tml:input name="username" cssclass="form-control" html_placeholder="Ihr Benutzername ..." focus="{item:$mc.hasDefaultDbKey}"/>
+				</div>
+				<div class="form-group">
+					<label>Kennwort</label>
+					<tml:input name="password" type="password" cssclass="form-control" html_placeholder="Ihr Kennwort ..."/>
+				</div>
+				<div class="form-group">
+					<tml:button cssclass="btn btn-primary" clickaction="$mc.cmlogin" html_type="submit">Anmelden ...</tml:button>
+				</div>
 				
 			</tml:form>
 			
