--- a/OpenWGA/plugins/cm-neo/design/tml/html/login-to-default-app.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/login-to-default-app.tml
@@ -7,16 +7,12 @@
 			<img class="logo" src="<tml:url type="static" file="images/brand/logo_600.png"/>">
 		
 			<tml:form source="none" id="login" defaultaction="$mc.cmlogin" cssstyle="margin:30px 0">
-				<tml:case condition="tmlform.hasmessages()">
-					<div class="alert alert-danger">
-						<h4>Es ist ein Fehler aufgetreten</h4>
-						<ul><li>
-							<tml:formmessages divider="</li><li>"/>
-						</li></ul>
-					</div>
-				</tml:case>
 				
-				<tml:{div} html_class="form-group" unless="$mc.defaultDbKey">
+				<tml:{div} html_class="alert alert-danger" if="$mc.hasMessages">
+					<tml:formmessages divider="<br>"/>
+				</tml:{div}>
+				
+				<tml:{div} html_class="form-group" unless="$mc.hasDefaultDbKey">
 					<label>Zu bearbeitende Website</label>
 					<tml:input name="dbkey" cssclass="form-control" html_placeholder="Name (Schlüssel) der Website" focus="true"
 						validation="$E_VALUE!=''"
@@ -26,11 +22,17 @@
 				
 				<div class="form-group">
 					<label>Benutzername</label>
-					<tml:input name="username" cssclass="form-control" html_placeholder="Ihr Benutzername ..." focus="{item:$mc.hasDefaultDbKey}"/>
+					<tml:input name="username" cssclass="form-control" html_placeholder="Ihr Benutzername ..." focus="{item:$mc.hasDefaultDbKey}"
+						validation="$E_VALUE!=''"
+						message="Bitte geben Sie einen Benutzernamen ein"						
+					/>
 				</div>
 				<div class="form-group">
 					<label>Kennwort</label>
-					<tml:input name="password" type="password" cssclass="form-control" html_placeholder="Ihr Kennwort ..."/>
+					<tml:input name="password" type="password" cssclass="form-control" html_placeholder="Ihr Kennwort ..."
+						validation="$E_VALUE!=''"
+						message="Bitte geben Sie ein Kennwort ein"						
+					/>
 				</div>
 				<div class="form-group">
 					<tml:button cssclass="btn btn-primary" clickaction="$mc.cmlogin" html_type="submit">Anmelden ...</tml:button>
