#00005234: @cmm: improved settings-layout for modules using utils:select-file

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/setting.tml
@@ -29,7 +29,9 @@
 </div>
 
 <label><tml:label key="content-box.settings.background-image"/>:</label>
-<tml:include ref="util:select-image" o_mode="{option:mode}"/>
+<div style="margin:10px">
+	<tml:include ref="util:select-image" o_mode="{option:mode}"/>
+</div>
 
 <label><tml:label key="content-box.settings.margin"/>:</label>
 <div style="margin:10px">
