optimized textarea-autogrow

--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/pagetypes/form.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/pagetypes/form.tml
@@ -18,6 +18,8 @@
 
 <script>
 	require(["jquery", "jquery-textarea-autogrow"], function($){
-		$("#<tml:script expression="tmlform.formid"/> textarea").autogrow();
+		$("a[data-toggle='tab']").on("shown.bs.tab", function(){
+			$("#<tml:script expression="tmlform.formid"/> textarea").autogrow()
+		})
 	})
 </script>
