--- a/OpenWGA/plugins/cm-neo/design/scripts/css/header.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/header.scss
@@ -53,6 +53,9 @@
 				.text {
 	 				font-size: 80%;	 				
 					margin-top: 5px;
+					max-width: 120px;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 			}
 			
