#00005257: CM-Neo: deactivate menu "userdefined-settings" if no settings available

--- a/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
@@ -71,6 +71,7 @@
 				) 
 				&& Content.mayEditContent()
 			);
+			event.setParameter("has_userdefined_settings", Content.getUserdefinedMetasTML()!=null)
 		}
 	}
 	
