#00005261: Advanced management of RTF links and RTF images

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -303,7 +303,7 @@
 	}
 }
 
-#dialog-edit-html {
+#dialog-edit-html, #dialog-edit-rtf-link, #dialog-edit-rtf-image {
 	width: 800px;
 	margin-left: -400px;
 }
