--- a/OpenWGA/plugins/cm-neo/design/tml/html/toolbar.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/toolbar.tml
@@ -206,7 +206,7 @@
 				_iconClass = context('db:'+portlet.dbkey).meta("db","useraccess") == 90 ? "fa-user-plus" : "fa-user";  
 			</tml:script>
 			<span class="icon fa <tml:item name="_iconClass"/>"></span>
-			<div class="text"><tml:meta type="database" name="username" context="[db:{portlet.dbkey}]"/></div>
+			<div class="text username"><tml:meta type="database" name="username" context="[db:{portlet.dbkey}]"/></div>
 		</a>
 	</div>
 </div>
