--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/render.tml
@@ -27,7 +27,7 @@
 	<tml:then>
 		<tml:portlet name="[{option('ns')}-image]" ref="::image" ajax="true" o_mode="edit" portletmode="view"/>
 	</tml:then>
-	<tml:elseif condition="CMM.setting('image')">
+	<tml:else>
 		<tml:include ref="::image"/>
-	</tml:elseif>
+	</tml:else>
 </tml:if>
